<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">


        <ListPreference
            app:defaultValue="Anglais"
            app:entries="@array/languages"
            app:entryValues="@array/languages"
            app:key="Anglais"
            app:title="@string/langue"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="prout">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/theme" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/messages_header">

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/languages"
            app:entryValues="@array/languages"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>