<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/phrase_eveil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/douce_phrase"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.207" />

    <TextView
        android:id="@+id/heure_du_reveil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reveil_heure"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344" />


    <ImageView
        android:id="@+id/alarm"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:src="@drawable/ic_alarm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/reveil_plus_tard"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.574"
        app:tint="@color/white"
        android:contentDescription="@string/label_alarm" />

    <ImageView
        android:id="@+id/reveil_plus_tard"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:src="@drawable/ic_snooze_later"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/alarm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.574"
        app:tint="@color/white"
        android:contentDescription="@string/label_soon" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:src="@drawable/ic_puzzle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toEndOf="@+id/alarm"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.574"
        app:tint="@color/white"
        android:contentDescription="@string/label_resoudre"/>




</androidx.constraintlayout.widget.ConstraintLayout>