<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="application.ProfilActivity">


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_nav"
        app:itemBackground="@color/blue_green"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/menu_nav"
        android:layout_alignParentBottom="true"/>

    <Button
        android:id="@+id/changeMyLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/changeLang"
        android:layout_marginLeft="230dp">

    </Button>



    <Button
        android:id="@+id/deco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_nav"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="603dp"
        android:onClick="deconnexion"
        android:text="@string/label_deconnexion"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="361dp"
        android:layout_height="265dp"
        android:layout_above="@+id/bottom_nav"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="220dp"
        android:paddingTop="100dp"
        app:srcCompat="@drawable/logo_muf"
        android:contentDescription="@string/img"/>


</RelativeLayout>