<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize"
    android:background="@color/dark_blue">

    <ImageView
        android:id="@+id/img_star3"
        android:layout_width="50dp"
        android:layout_height="65dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90"
        app:srcCompat="@drawable/ic_star"
        android:contentDescription="@string/img"/>

    <ImageView
        android:id="@+id/img_star2"
        android:layout_width="50dp"
        android:layout_height="65dp"
        android:layout_marginStart="255dp"
        android:layout_marginLeft="255dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060"
        app:srcCompat="@drawable/ic_star"
        android:contentDescription="@string/img"/>

    <ImageView
        android:id="@+id/img_star4"
        android:layout_width="50dp"
        android:layout_height="65dp"
        android:layout_marginStart="355dp"
        android:layout_marginLeft="355dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.845"
        app:srcCompat="@drawable/ic_star"
        android:contentDescription="@string/img"/>


    <ProgressBar
        android:id="@+id/prog_timer"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:progress="45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:progressTint="@color/yellow"/>

    <TextView
        android:id="@+id/tv_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_score"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prog_timer" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/label_score"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prog_timer" />

    <TextView
        android:id="@+id/tv_questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/label_score"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_score"
        app:layout_constraintStart_toEndOf="@+id/tv_timer"
        app:layout_constraintTop_toBottomOf="@+id/prog_timer" />

    <ImageView
        android:id="@+id/img_star1"
        android:layout_width="50dp"
        android:layout_height="65dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.540"
        app:srcCompat="@drawable/ic_star"
        android:contentDescription="@string/img"/>

    <ImageView
        android:id="@+id/img_fondFlou"
        android:layout_width="330dp"
        android:layout_height="525dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/img"
        app:srcCompat="@drawable/fond_flou" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="305dp"
        android:layout_height="240dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="130dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_bottommessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_questions"
        app:layout_constraintVertical_bias="0.380">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_rep0"
                android:layout_width="wrap_content"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:height="200dp"
                android:backgroundTint="@color/space_blue"
                android:text="@string/label_calcul" />

            <Button
                android:id="@+id/btn_rep1"
                android:layout_width="wrap_content"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:height="200dp"
                android:backgroundTint="@color/space_blue"
                android:text="@string/label_calcul" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_rep2"
                android:layout_width="wrap_content"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:height="200dp"
                android:backgroundTint="@color/space_blue"
                android:text="@string/label_calcul" />

            <Button
                android:id="@+id/btn_rep3"
                android:layout_width="wrap_content"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:height="200dp"
                android:backgroundTint="@color/space_blue"
                android:text="@string/label_calcul" />

        </TableRow>


    </TableLayout>

    <TextView
        android:id="@+id/tv_bottommessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/label_jouer"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/img_moony"
        android:layout_width="195dp"
        android:layout_height="150dp"
        android:layout_marginTop="215dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tableLayout"
        app:srcCompat="@drawable/ic_moony"
        android:contentDescription="@string/img" />


</androidx.constraintlayout.widget.ConstraintLayout>